# pypeline

./: .gitignore  README.md  pyproject.toml
src/pypeline/: __init__.py  connector.py  data.py  pipe.py  transformer.py
src/pypeline/connectors/: __init__.py  csv_connector.py  data_connector.py  parquet_connector.py  sql_connector.py
src/pypeline/transformers/: select_transformer.py
tests/: __init__.py  test_connectors.py  test_pype.py  test_pype_data.py  test_sql_connector.py  test_transformer.py
