[project]
name = "pypeline"
version = "0.1.4"
description = "A wrapper around polars and duckdb"
readme = "README.md"
authors = [
    { name = "Barron Fritz", email = "barron.vonn.fritz@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.3.0",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "pyodbc>=5.2.0",
    "sqlalchemy>=2.0.41",
]

[project.scripts]
pypeline = "pypeline:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.12",
]

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]

[tool.pyright]
include = ["src"]
ignore = ["**/typings"]
exclude = [".*", "__*", "**/typings"]

[tool.ruff.lint]
select = ["ALL"]
